tests/cases/error/error_missing_include.rinc
error_missing_include.rapt